fixed double scrollbar and added some decent scrollbar styles

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -122,13 +122,23 @@ input.tm-field {
   animation: fade 1.5s infinite;
 }
 
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(250, 250, 250, 0.25)
+}
+
 @keyframes fade {
   0% {
     opacity: 0.4;
   }
+
   50% {
     opacity: 0.7;
   }
+
   100% {
     opacity: 0.4;
   }
